# mz-module

./: .gitignore  CMakeLists.txt  Kconfig  README.md
applications/blinky/: CMakeLists.txt  app.overlay  fmuk64f.overlay  prj.conf
applications/blinky/boards/: fmuk64f.overlay
applications/blinky/src/: main.c  main_th.c
applications/motor/: CMakeLists.txt
applications/myapp/: CMakeLists.txt  prj.conf
applications/myapp/boards/: fmuk64f.overlay
applications/myapp/src/: main.c
boards/fmuk64f/: fmuk64f.dts
boards/fmuk66/: Kconfig.defconfig  Kconfig.fmuk66  board.yml  fmuk66-pinctrl.dtsi  fmuk66.dts  fmuk66.yaml
documents/: .bashrc
drivers/: CMakeLists.txt  Kconfig  m_motor.c  m_motor.h
drivers/button/: CMakeLists.txt  Kconfig  button.c  button.h
drivers/gpio/: CMakeLists.txt  Kconfig  m_gpio.c  m_gpio.h
drivers/led/: CMakeLists.txt  Kconfig  m_led.c  m_led.h
drivers/switch/: CMakeLists.txt  Kconfig  m_switch.c  m_switch.h
drivers/timer/: CMakeLists.txt  Kconfig  m_timer.c  m_timer.h
drivers/usb/: CMakeLists.txt  Kconfig.usbd  m_usbd.h
drivers/usbcdc/: CMakeLists.txt  Kconfig.usbcdc  m_usbd.c  m_usbd.h
drivers/usbd/: m_usbd.c  m_usbd.h
dts/bindings/: m,gpio.yaml  m_gpio.yaml  mg,button.yaml  mz,led.yaml  mz,switch.yaml
zephyr/: module.yml
